--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 </head>
 <body>
   <main></main>
-  <script type="module" src="./main.js"></script>
+  <script type="module" src="./client/client.js"></script>
 </body>
 </html>
