--- a/core/client/index.html
+++ b/core/client/index.html
@@ -17,6 +17,6 @@
 </head>
 <body>
   <main></main>
-  <script type="module" src="./client/client.js"></script>
+  <script type="module" src="./client.js"></script>
 </body>
 </html>
