--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>기능실험</title>
+  <title>클라이언트</title>
   <meta charset="UTF-8">
   <style>
+    .layer {
+      position: fixed;
+    }
     body {
       background-color: rgb(33, 33, 33);
       color: #FFF;
       margin: 0;
       user-select: none;
     }
-    a {
-      color: inherit;
-      text-decoration: none;
-    }
   </style>
 </head>
 <body>
-  <a href="core/client/client.html">클라이언트 들어가기</a>
+  <main></main>
+  <script type="module" src="./core/client/client.js"></script>
 </body>
 </html>
